Change theme info

--- a/wp-content/themes/OverheadPress/style.css
+++ b/wp-content/themes/OverheadPress/style.css
@@ -1,11 +1,11 @@
 /*
-Theme Name:         FoundationPress
-Theme URI:          http://foundationpress.olefredrik.com
-Github Theme URI:   https://github.com/olefredrik/FoundationPress
-Description:        FoundationPress is a WordPress starter theme based on Foundation 6 by Zurb
-Version:            2.10.4
-Author:             Ole Fredrik Lie
-Author URI:         http://olefredrik.com/
+Theme Name:         OverheadPress
+Theme URI:          https://ogdendavis.com
+Github Theme URI:   https://github.com/ogdendavis/new-tcf
+Description:        A theme for Thomasville CrossFit, based on FoundationPress, which is based on Foundation 6 by Zurb
+Version:            0.1
+Author:             Lucas Ogden-Davis
+Author URI:         https://ogdendavis.com/
 
 License:            MIT License
 License URI:        http://www.opensource.org/licenses/mit-license.php
