--- a/wp-content/themes/reactfit/style.css
+++ b/wp-content/themes/reactfit/style.css
@@ -1,13 +1,11 @@
 /*
 Theme Name: reactfit
-Author: your-name
-Author URI: https://github.com/your-github
-Description: Create React WP Themes with no build configuration
+Author: Lucas Ogden-Davis
+Author URI: https://github.com/ogdendavis
+Description: React-based WP theme for Thomasville CrossFit
 Version: 0.1
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
-Tags: starter
-Text Domain: your-domain
 
 This theme, like WordPress, is licensed under the GPL.
 */
