Add temporary hero image

--- a/wp-content/themes/reactfit/react-src/src/components/Header.css
+++ b/wp-content/themes/reactfit/react-src/src/components/Header.css
@@ -2,3 +2,12 @@
   background: var(--black);
   color: var(--white);
 }
+
+.hero--temp {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: -1;
+  width: 100%;
+}
