Add Font Awesome

--- a/wp-content/themes/reactfit/react-src/src/global/colors.css
+++ b/wp-content/themes/reactfit/react-src/src/global/colors.css
@@ -1,8 +1,12 @@
 :root {
+  /* base colors */
   --black: #181818;
   --white: #fff;
   --tcf-blue: #005fed;
   --orange: #ff6400;
   --yellow: #ffcb00;
   --purple: #8300ee;
+  /* Making some transparent overlays */
+  --black-transparent: rgba(24, 24, 24, 0.5);
+  --black-opaque: rgba(24, 24, 24, 0.9);
 }
