--- a/wp-content/themes/reactfit/react-src/src/components/Header.css
+++ b/wp-content/themes/reactfit/react-src/src/components/Header.css
@@ -1,7 +1,20 @@
 .site-header {
-  background: var(--black);
+  background: linear-gradient(var(--black-opaque), var(--black-opaque));
   color: var(--white);
 }
+
+.header__row-one, .header__row-two {
+  display: flex;
+  width: 100vw;
+  padding: 10px;
+}
+
+.header__contact {
+  font-size: 14px;
+  font-weight: 700;
+  padding-left: 2em;
+}
+
 
 .hero--temp {
   position: absolute;
