Switch hero position to relative

--- a/wp-content/themes/reactfit/react-src/src/components/Hero.css
+++ b/wp-content/themes/reactfit/react-src/src/components/Hero.css
@@ -1,9 +1,7 @@
 .hero {
   z-index: -1;
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
+  position: relative;
+  margin-top: -121px; /* Based on Header menu height */
   height: 70vh;
   background-repeat: no-repeat;
   background-size: cover;
