--- a/wp-content/themes/reactfit/react-src/src/components/Footer.css
+++ b/wp-content/themes/reactfit/react-src/src/components/Footer.css
@@ -1,3 +1,13 @@
 .site-footer {
-  background: blue;
+  background: linear-gradient(var(--black-opaque), var(--black-opaque));
+  color: var(--white);
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  padding: 1em;
+  font-size: 14px;
+}
+
+.site-footer .social__icon {
+  margin: 0 1em;
 }
