Add dummy Content component

--- a/wp-content/themes/reactfit/react-src/src/global/colors.css
+++ b/wp-content/themes/reactfit/react-src/src/global/colors.css
@@ -2,6 +2,7 @@
   /* base colors */
   --black: #222;
   --white: #fff;
+  --off-white: #f7f7f7;
   --tcf-blue: #005fed;
   --orange: #ff6400;
   --yellow: #ffcb00;
