--- a/wp-content/themes/reactfit/react-src/src/components/Footer.css
+++ b/wp-content/themes/reactfit/react-src/src/components/Footer.css
@@ -2,6 +2,10 @@
   color: var(--white);
 }
 
+.site-footer a {
+  color: var(--yellow);
+}
+
 .site-footer__upper, .site-footer__lower {
   padding: 1em 0;
   display: flex;
