--- a/wp-content/themes/reactfit/react-src/src/global/iconography.css
+++ b/wp-content/themes/reactfit/react-src/src/global/iconography.css
@@ -1,3 +1,22 @@
+.button {
+  display: inline-block;
+  padding: 1rem;
+  margin: 1rem;
+  border-radius: var(--rounded);
+  color: white;
+  text-decoration: none;
+  font-weight: 700;
+  font-size: 18px;
+  background: var(--tcf-blue);
+  transition: var(--transition);
+  border: 1px solid var(--tcf-blue);
+}
+
+.button:hover {
+  background: var(--white);
+  color: var(--tcf-blue);
+}
+
 .social__icon {
   max-width: 3em;
 }
