--- a/wp-content/themes/reactfit/react-src/src/components/Header.css
+++ b/wp-content/themes/reactfit/react-src/src/components/Header.css
@@ -1,5 +1,5 @@
 .site-header {
-  background: linear-gradient(var(--black-opaque), var(--black-opaque));
+  background: linear-gradient(var(--black-a9), var(--black-a9));
   color: var(--white);
 }
 
