--- a/wp-content/themes/reactfit/react-src/src/global/colors.css
+++ b/wp-content/themes/reactfit/react-src/src/global/colors.css
@@ -9,13 +9,15 @@
   --purple: #8300ee;
 
   /* Making some transparent overlays */
-  --black-transparent: rgba(34,34,34,0.5);
-  --black-opaque: rgba(34,34,34,0.9);
+  --black-a5: rgba(34,34,34,0.5);
+  --black-a6: rgba(34,34,34,0.6);
+  --black-a9: rgba(34,34,34,0.9);
 
-  --tcf-blue-semiopaque: rgba(0,95,237,0.8);
-  --tcf-blue-opaque: rgba(0,95,237,0.9);
+  --off-white-a5: rgba(247,247,247,0.5);
 
-  --orange-opaque: rgba(255,100,0,0.9);
+  --tcf-blue-a8: rgba(0,95,237,0.8);
+  --tcf-blue-a9: rgba(0,95,237,0.9);
 
-  --yellow-opaque: rgba(255,203,0,0.9);
+  --orange-a5: rgba(255,100,0,0.5);
+  --orange-a9: rgba(255,100,0,0.9);
 }
