Add basic testimonial

--- a/wp-content/themes/reactfit/react-src/src/global/colors.css
+++ b/wp-content/themes/reactfit/react-src/src/global/colors.css
@@ -15,6 +15,7 @@
 
   --off-white-a5: rgba(247,247,247,0.5);
 
+  --tcf-blue-a5: rgba(0,95,237,0.5);
   --tcf-blue-a8: rgba(0,95,237,0.8);
   --tcf-blue-a9: rgba(0,95,237,0.9);
 
