--- a/wp-content/themes/reactfit/react-src/src/templates/Home.css
+++ b/wp-content/themes/reactfit/react-src/src/templates/Home.css
@@ -131,7 +131,35 @@
   font-size: 1.5rem;
 }
 
+.section__heading {
+  text-align: center;
+  font-size: 3rem;
+}
+
+.trainer {
+  display: flex;
+  flex-flow: row wrap;
+  align-items: center;
+  justify-content: space-evenly;
+  background: var(--black-a5);
+  color: var(--white);
+  padding: 1rem;
+  margin: 2rem 0;
+}
+
+.trainer h3 {
+  margin: 0 0 1rem;
+}
+
+.trainer:nth-child(2n) .trainer__text {
+  order: 1;
+}
+
+.trainer__text {
+  max-width: 700px;
+}
+
 .trainer__photo img {
   border-radius: 50%;
-  max-width: 20rem;
+  max-width: 15rem;
 }
