Finished: Add last do-it. WIP: modify trainer styling

--- a/wp-content/themes/reactfit/react-src/src/templates/Home.css
+++ b/wp-content/themes/reactfit/react-src/src/templates/Home.css
@@ -143,8 +143,10 @@
   justify-content: space-evenly;
   background: var(--black-a5);
   color: var(--white);
-  padding: 1rem;
-  margin: 2rem 0;
+  padding: 1rem 3rem;
+  margin: 2rem auto;
+  width: fit-content;
+  width: -moz-fit-content;
 }
 
 .trainer h3 {
