--- a/wp-content/themes/reactfit/react-src/src/templates/Home.css
+++ b/wp-content/themes/reactfit/react-src/src/templates/Home.css
@@ -139,6 +139,7 @@
   flex: 1 1 0px;
   box-sizing: border-box;
   padding: 3rem 2rem;
+  margin: 0 1rem 2rem;
   /* display: flex;
   flex-flow: row wrap;
   align-items: center;
