--- a/wp-content/themes/reactfit/react-src/src/templates/Home.css
+++ b/wp-content/themes/reactfit/react-src/src/templates/Home.css
@@ -140,21 +140,18 @@
   box-sizing: border-box;
   padding: 3rem 2rem;
   margin: 0 1rem 2rem;
-  /* display: flex;
-  flex-flow: row wrap;
-  align-items: center;
-  justify-content: space-evenly;
-  background: var(--black-a5);
-  color: var(--white);
-  padding: 1rem 3rem;
-  margin: 2rem auto;
-  width: fit-content;
-  width: -moz-fit-content; */
+  height: 35rem;
 }
 
 .trainer h3 {
-  margin: 0 0 1rem;
-  text-align: center;
+  margin: -1rem 0 1rem;
+  display: inline-block;
+  text-align: left;
+  box-sizing: border-box;
+  padding: 1rem;
+  margin-left: -2rem;
+  background: var(--tcf-blue);
+  color: var(--white);
 }
 
 .trainer__text {
