--- a/wp-content/themes/reactfit/react-src/src/templates/Home.css
+++ b/wp-content/themes/reactfit/react-src/src/templates/Home.css
@@ -140,7 +140,7 @@
   box-sizing: border-box;
   padding: 3rem 2rem;
   margin: 0 1rem 2rem;
-  height: 35rem;
+  position: relative;
 }
 
 .trainer h3 {
@@ -152,22 +152,38 @@
   margin-left: -2rem;
   background: var(--tcf-blue);
   color: var(--white);
+  position: relative;
+  z-index: 2;
 }
 
 .trainer__text {
-  max-width: 700px;
   text-align: justify;
+  margin: 12rem 3rem 5rem;
+  color: transparent;
+  position: relative;
+  z-index: 2;
+  transition: var(--transition);
 }
 
-.trainer__photo {
-  text-align: center;
+.trainer:hover .trainer__text {
+  color: var(--black);
 }
 
-.trainer__photo img {
-  display: inline-block;
-  border-radius: 50%;
-  width: 85%;
-  margin: 0 auto 1rem
+.trainer::after {
+  content: '';
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 1;
+  background: var(--white);
+  opacity: 0;
+  transition: var(--transition);
+}
+
+.trainer:hover::after {
+  opacity: 0.85;
 }
 
 .home__schedule {
