--- a/wp-content/themes/reactfit/react-src/src/modules/Testimonials.css
+++ b/wp-content/themes/reactfit/react-src/src/modules/Testimonials.css
@@ -15,6 +15,7 @@
 
 .testimonials__arrow--left, .testimonials__arrow--right {
   width: 2rem;
+  margin: 0 1rem;
 }
 
 .testimonial__text {
@@ -26,17 +27,18 @@
   display: block;
   font-family: var(--heading-font);
   font-size: 5rem;
-  line-height: 5rem;
   box-sizing: border-box;
 }
 
 .testimonial::before {
   content: '“';
+  line-height: 2rem;
 }
 
 .testimonial::after {
   content: '”';
   text-align: right;
+  line-height: 4rem;
 }
 
 .testimonial__author {
