--- a/wp-content/themes/reactfit/react-src/src/modules/Contact.css
+++ b/wp-content/themes/reactfit/react-src/src/modules/Contact.css
@@ -1,6 +1,3 @@
-.TEST {
-  font-size: 3rem;
-  color: red;
-  text-align: center;
-  background: #999;
+.wpcf7__container input:, .wpcf7__container textarea {
+  box-shadow: none;
 }
