Remove unused classes in Testimonials module

--- a/wp-content/themes/reactfit/react-src/src/modules/Testimonials.css
+++ b/wp-content/themes/reactfit/react-src/src/modules/Testimonials.css
@@ -13,7 +13,7 @@
   justify-content: space-evenly;
 }
 
-.testimonials__arrow--left, .testimonials__arrow--right {
+.testimonials__arrow {
   width: 2rem;
   margin: 0 1rem;
 }
