Tweak colors on Get Started

--- a/wp-content/themes/reactfit/react-src/src/templates/GetStarted.css
+++ b/wp-content/themes/reactfit/react-src/src/templates/GetStarted.css
@@ -26,8 +26,9 @@
 }
 
 .get-started__testimonials-container {
-  background: var(--black-a8);
+  background: var(--tcf-blue);
   color: var(--white);
+  margin-top: 2rem;
 }
 
 .get-started__testimonials-container .testimonials__arrow path {
