--- a/wp-content/themes/reactfit/react-src/src/templates/GetStarted.css
+++ b/wp-content/themes/reactfit/react-src/src/templates/GetStarted.css
@@ -34,3 +34,27 @@
 .get-started__testimonials-container .testimonials__arrow path {
   fill: var(--white);
 }
+
+.get-started__memberships {
+  display: flex;
+  flex-flow: row wrap;
+}
+
+.memberships__heading {
+  width: 100%;
+  padding-left: 2rem;
+}
+
+.dropin__content {
+  width: 100%;
+  background: url('http://localhost/new-tcf/wp-content/uploads/2019/11/morning-crew.jpg') left no-repeat;
+  padding: 20rem 5rem 5rem;
+}
+
+.dropin__text {
+  color: var(--white);
+  background: linear-gradient(var(--tcf-blue-a8),var(--tcf-blue-a8));
+  max-width: 50%;
+  padding: 2rem;
+  font-size: 1.25rem;
+}
