--- a/wp-content/themes/reactfit/react-src/src/global/colors.css
+++ b/wp-content/themes/reactfit/react-src/src/global/colors.css
@@ -11,6 +11,7 @@
 
   /* Making some transparent overlays */
   --black-a0: rgba(34,34,34,0);
+  --black-a1: rgba(34,34,34,0.1);
   --black-a5: rgba(34,34,34,0.5);
   --black-a6: rgba(34,34,34,0.6);
   --black-a8: rgba(34,34,34,0.8);
