Move body styles to identity.css, import in index.js

--- a/wp-content/themes/reactfit/react-src/src/global/identity.css
+++ b/wp-content/themes/reactfit/react-src/src/global/identity.css
@@ -5,6 +5,9 @@
 
 body {
   background: var(--off-white);
+  margin: 0;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
 /* Utility classes for controlling page content position */
