--- a/wp-content/themes/reactfit/react-src/src/modules/Testimonials.css
+++ b/wp-content/themes/reactfit/react-src/src/modules/Testimonials.css
@@ -4,6 +4,7 @@
   flex-flow: row nowrap;
   align-items: center;
   justify-content: space-between;
+  position: relative;
 }
 
 .testimonial {
@@ -11,11 +12,7 @@
   flex-flow: row wrap;
   align-items: center;
   justify-content: space-evenly;
-}
-
-.testimonials__arrow {
-  width: 2rem;
-  margin: 0 1rem;
+  padding: 0 5rem;
 }
 
 .testimonial__text {
@@ -53,4 +50,29 @@
 .testimonial__photo img {
   max-height: 20rem;
   border-radius: 50%;
+}
+
+.testimonials__nav-button {
+  border: 0;
+  background: none;
+  position: absolute;
+}
+
+.testimonials__nav-button:hover {
+  cursor: pointer;
+}
+
+.testimonials__nav-button:first-child {
+  left: 0;
+  top: 50%;
+}
+
+.testimonials__nav-button:last-child {
+  right: 0;
+  top: 50%;
+}
+
+.testimonials__arrow {
+  width: 2rem;
+  margin: 0 1rem;
 }
