Fix header nav link visited color

--- a/wp-content/themes/reactfit/react-src/src/global/typography.css
+++ b/wp-content/themes/reactfit/react-src/src/global/typography.css
@@ -21,7 +21,7 @@ a {
   transition: color .5s ease-in-out;
 }
 
-a:visited:not(.button){
+a:visited:not(.button):not(.header__nav-link) {
   color: var(--purple);
 }
 
