--- a/wp-content/themes/reactfit/react-src/src/global/identity.css
+++ b/wp-content/themes/reactfit/react-src/src/global/identity.css
@@ -46,7 +46,7 @@ body {
   height: 160px;
   position: relative;
 }
-.loading__spinner:after {
+.loading__spinner::after {
   content: " ";
   display: block;
   width: 144px;
@@ -55,7 +55,7 @@ body {
   border-radius: 50%;
   border: 6px solid var(--tcf-blue);
   border-color: var(--tcf-blue) transparent var(--tcf-blue) transparent;
-  animation: lds-dual-ring 1.2s linear infinite;
+  animation: 1.2s linear infinite lds-dual-ring;
 }
 @keyframes lds-dual-ring {
   0% {
