--- a/wp-content/themes/reactfit/react-src/src/components/Header.css
+++ b/wp-content/themes/reactfit/react-src/src/components/Header.css
@@ -1,14 +1,14 @@
 .site-header {
-  background: linear-gradient(var(--black), var(--black));
-  color: var(--white);
+  background: linear-gradient(#222,#222);
+  color: #fff;
   position: sticky;
   top: 0;
   z-index: 10;
-  transition: var(--transition);
+  transition: all .5s ease-in-out;
 }
 
 .site-header--scrolled {
-  background: linear-gradient(var(--black-a9), var(--black-a9));
+  background: linear-gradient(rgba(34,34,34,0.9),rgba(34,34,34,0.9));
 }
 
 .header__row-one, .header__row-two {
@@ -17,7 +17,7 @@
 }
 
 .header__row-one {
-  background: var(--black);
+  background: #222;
 }
 
 .header__contact {
@@ -40,7 +40,7 @@
 
 .header__logo img {
   width: 10rem;
-  transition: var(--transition);
+  transition: all .5s ease-in-out;
 }
 
 .site-header--scrolled .header__logo img {
@@ -56,7 +56,7 @@
   margin: 0 1.5rem;
   font-weight: 700;
   font-size: 20px;
-  transition: var(--transition);
+  transition: all .5s ease-in-out;
 }
 
 .site-header--scrolled .header-menu__item {
@@ -64,10 +64,10 @@
 }
 
 .header-menu__item a {
-  color: var(--white);
-  transition: var(--transition);
+  color: #fff;
+  transition: all .5s ease-in-out;
 }
 
 .header-menu__item a:hover {
-  color: var(--yellow);
+  color: #ffcb00;
 }
