--- a/wp-content/themes/reactfit/react-src/src/modules/Hero.css
+++ b/wp-content/themes/reactfit/react-src/src/modules/Hero.css
@@ -12,8 +12,8 @@
 
 .hero__tagline {
   text-align: left;
-  color: var(--white);
-  background: linear-gradient(var(--tcf-blue-a8),var(--tcf-blue-a8));
+  color: #fff;
+  background: linear-gradient(rgba(0,95,237,0.8),rgba(0,95,237,0.8));
   max-width: 50%;
   padding: 2rem;
 }
