--- a/wp-content/themes/reactfit/react-src/src/templates/GetStarted.css
+++ b/wp-content/themes/reactfit/react-src/src/templates/GetStarted.css
@@ -16,8 +16,8 @@
 
 .get-started__intro .intro__form-container {
   padding: 0 1rem;
-  background: var(--tcf-blue);
-  color: var(--white);
+  background: #005fed;
+  color: #fff;
 }
 
 .intro__form-container .get-started__form {
@@ -25,13 +25,13 @@
 }
 
 .get-started__testimonials-container {
-  background: var(--tcf-blue);
-  color: var(--white);
+  background: #005fed;
+  color: #fff;
   margin-top: 2rem;
 }
 
 .get-started__testimonials-container .testimonials__arrow path {
-  fill: var(--white);
+  fill: #fff;
 }
 
 .get-started__memberships {
@@ -49,8 +49,8 @@
 }
 
 .dropin__text {
-  color: var(--white);
-  background: linear-gradient(var(--tcf-blue-a8),var(--tcf-blue-a8));
+  color: #fff;
+  background: linear-gradient(rgba(0,95,237,0.8),rgba(0,95,237,0.8));
   max-width: 50%;
   padding: 2rem;
   font-size: 1.25rem;
