--- a/wp-content/themes/reactfit/react-src/src/modules/Contact.css
+++ b/wp-content/themes/reactfit/react-src/src/modules/Contact.css
@@ -1,3 +1,3 @@
-.wpcf7__container input:, .wpcf7__container textarea {
+.wpcf7__container input, .wpcf7__container textarea {
   box-shadow: none;
 }
